--- a/css/style_pagina_inicial.css
+++ b/css/style_pagina_inicial.css
@@ -3,7 +3,7 @@ body {
   font-family: Arial, sans-serif;
   background-color: #121212;
   color: #ccff00;
-  text-align: center; 
+  text-align: center;
 }
 
 
@@ -61,15 +61,16 @@ nav a:hover {
   margin: 40px auto;
   width: 90%; 
   max-width: 1200px;
-  border-radius: 10px;
+  border-radius: 15px;
   display: flex;
   overflow-x: auto;
   padding: 10px 0;
 }
 
 .carrossel img{
-flex: 0 0 calc(100% / 6 - 20px);
+flex: 0 0 calc(100% / 5 - 20px);
 margin-right: 20px;
+width: 200px;
 }
 
 .slides {
