--- a/css/metricas.css
+++ b/css/metricas.css
@@ -40,3 +40,57 @@ footer {
     height: 60px;
     background-color: #ccff00;
 }
+.image-grid {
+    display: grid;
+    justify-items: center;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 20px;
+    padding: 20px;
+}
+.image-slot img {
+    width: 100%;
+    height: auto;
+    border-radius: 8px;
+    object-fit: cover;
+}
+.image-slot{
+    justify-items: center;
+    width: 100%;
+    height: auto;
+    border-radius: 8px;
+    object-fit: cover   ;
+}
+.highlight-section {
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+    margin: 40px 0;
+}
+.highlight-box {
+    width: 300px;
+    height: 200px;
+    background-color: white;
+    border-color: white;
+    border-radius: 8px;
+    overflow: hidden;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+.highlight-box img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+.banner {
+    background-color: #ccff00;
+    padding: 30px;
+    text-align: center;
+    font-weight: bold;
+    font-size: 1.2em;
+    color: #000;
+}
+.banner img{
+
+    max-width: 100%;
+    height: auto;
+    border-radius: 8px;
+}
