--- a/css/inicio.css
+++ b/css/inicio.css
@@ -124,7 +124,6 @@ nav a:hover {
   margin: 40px auto;
   width: 90%; 
   max-width: 1200px;
-  border-radius: 15px;
   display: flex;
   overflow-x: auto;
   padding: 10px 0;
@@ -134,15 +133,16 @@ nav a:hover {
 flex: 0 0 calc(100% / 5 - 20px);
 margin-right: 20px;
 width: 200px;
+border-radius: 20px;
 }
 
 .slides {
   display: flex;
-  justify-content: space-between; /* Distribui o espaço entre as imagens */
-  flex-wrap: wrap; /* Permite que as imagens quebrem a linha se não couberem */
-  gap: 20px; /* Espaço entre as imagens */
-  width: 100%; /* Ocupa a largura total do contêiner */
-  /* ANIMAÇÃO REMOVIDA */
+  justify-content: space-between; 
+  flex-wrap: wrap; 
+  gap: 20px; 
+  width: 100%; 
+ 
 }
 
 .slides img {
