--- a/css/metricas.css
+++ b/css/metricas.css
@@ -191,11 +191,10 @@ h1 {
     border-radius: 8px;
 }
 footer {
-    display: flex;
-    height: 60px;
-    background-color: #121212;
-    text-align: center;
-    justify-content: center;
-    color: #fff;
-    padding-top: 8px;
+  text-align: center;
+  background-color: #121212;
+  color: white;
+  padding: 15px;
+  margin-top: 40px;
+  font-family: "Roboto", sans-serif;
 }
